--- a/ClientPhone/MainWindow.xaml
+++ b/ClientPhone/MainWindow.xaml
@@ -38,7 +38,7 @@
                 <DockPanel>
                     <TextBlock Text="УК:" Margin="3" FontWeight="Bold"/>
                     <TextBlock Text="{Binding CallFromServiceCompany.Name}" Margin="3" FontWeight="Bold"/>
-                    <Button HorizontalAlignment="Right" Background="Transparent" BorderThickness="0" Command="{Binding ServiceCompanyInfoCommand}">
+                    <Button Visibility="Collapsed" HorizontalAlignment="Right" Background="Transparent" BorderThickness="0" Command="{Binding ServiceCompanyInfoCommand}">
                         <Image Source="pack://application:,,,/Images/info_24.png" Height="24" />
                     </Button>
                 </DockPanel>
@@ -134,7 +134,7 @@
             </ListBox>
             <DockPanel Grid.Row="2" Margin="3">
                 <TextBlock  Margin ="3" FontWeight="Bold" TextAlignment="Center" Text="Непринятые звонки:"/>
-                <Button HorizontalAlignment="Center" Background="Transparent" BorderThickness="0" ToolTip="Удаление пропущенных звонков исключая звонки за сегодня!" Command="{Binding DeleteNotAnsweredCommand}">
+                <Button Visibility="Collapsed" HorizontalAlignment="Center" Background="Transparent" BorderThickness="0" ToolTip="Удаление пропущенных звонков исключая звонки за сегодня!" Command="{Binding DeleteNotAnsweredCommand}">
                     <Image Source="pack://application:,,,/Images/delete-24.png" Stretch="UniformToFill" Height="24"/>
                 </Button>
             </DockPanel>
@@ -349,9 +349,13 @@
                                     <DataTemplate DataType="dto:CallsListDto">
                                         <DockPanel HorizontalAlignment="Center">
                                             <Button Width="20" Command="{Binding ElementName=RecordGrid, Path=DataContext.PlayCommand}" CommandParameter="{Binding ElementName=RecordGrid, Path=SelectedItem}"
-                                            Visibility="{Binding EnablePlayButton, Converter={StaticResource BooleanToVisibility} }">
+                                            Visibility="Collapsed">
                                                 <Image Source="pack://application:,,,/Images/play.png"/>
                                             </Button>
+                                            <!--<Button Width="20" Command="{Binding ElementName=RecordGrid, Path=DataContext.PlayCommand}" CommandParameter="{Binding ElementName=RecordGrid, Path=SelectedItem}"
+                                            Visibility="{Binding EnablePlayButton, Converter={StaticResource BooleanToVisibility} }">
+                                                <Image Source="pack://application:,,,/Images/play.png"/>
+                                            </Button>-->
                                             <Button Width="20" Margin="3,0" Command="{Binding ElementName=RecordGrid, Path=DataContext.DownloadRecordCommand}" CommandParameter="{Binding ElementName=RecordGrid, Path=SelectedItem}"
                                     Visibility="{Binding EnablePlayButton, Converter={StaticResource BooleanToVisibility} }">
                                                 <Image Source="pack://application:,,,/Images/floppy.ico"/>
@@ -370,16 +374,6 @@
                     </DockPanel>
                 </Grid>
             </TabItem>
-            <TabItem>
-                <TabItem.Header>
-                    <StackPanel Orientation="Horizontal">
-                        <Image  Source="pack://application:,,,/Images/danger_small.png" Stretch="UniformToFill" Height="28" />
-                        <TextBlock Margin="3" Text="Контроль аварийных"/>
-                    </StackPanel>
-                </TabItem.Header>
-                <controls:AlertRequestControl DataContext="{Binding AlertRequestDataContext}"/>
-            </TabItem>
-
             <TabItem Visibility="Collapsed">
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
