--- a/CRMPhone/Controls/DispatcherControl.xaml
+++ b/CRMPhone/Controls/DispatcherControl.xaml
@@ -46,6 +46,26 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                <DataGridTemplateColumn Width="30" >
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <Image Source="pack://application:,,,/Images/screen32.png" Height="24" HorizontalAlignment="Center"/>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="dto:RequestForListDto">
+                            <Button Width="20" VerticalAlignment="Center" Command="{Binding ElementName=DispatcherGrid, Path=DataContext.ScreenCommand}" CommandParameter="{Binding ElementName=DispatcherGrid, Path=SelectedItem}">
+                                <Image Source="pack://application:,,,/Images/screen32.png"/>
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTextColumn Header="SIP номер" Width="70"
                                     Binding="{Binding Path=SipNumber}">
                     <DataGridTextColumn.ElementStyle>
@@ -83,7 +103,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Номер телефона" Width="120"
+                <DataGridTextColumn Header="Номер телефона" Width="110"
                              Binding="{Binding Path=PhoneNumber}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
@@ -93,7 +113,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Вр. ожидания" Width="100"
+                <DataGridTextColumn Header="Вр. ожидания" Width="90"
                              Binding="{Binding Path=WaitingTime}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
@@ -103,7 +123,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Вр. разговора" Width="100"
+                <DataGridTextColumn Header="Вр. разговора" Width="90"
                              Binding="{Binding Path= TalkTime}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
